--- a/sections/cinematica.tex
+++ b/sections/cinematica.tex
@@ -1,5 +1,45 @@
-
-Versore 
+Un corpo è in moto, \emph{rispetto ad un sistema di 
+riferimento $S$}, quando la sua posizione in $S$ cambia
+nel tempo. Le caratteristiche del moto del \emph{punto materiale}
+sono note se è noto il vettore posizione $\vec{r}$ in funzione del
+tempo, ovvero:
 \[
-    \hat{r}
+    \vec{r}(t) = \begin{cases}
+        x = x(t) \\
+        y = y(t) \\
+        z = z(t)
+    \end{cases}
+\]
+nel sistema di riferimento $S$. 
+Conoscere il vettore posizione significa conoscere come variano 
+tutte le coordinate, $x, y, z$ in funzione del tempo. 
+Nell'ipotesi implicita di continuità del moto(il tempo è una variabile
+continua) il moto può essere descritto attraverso l' \textbf{equazione vettoriale}
+\[
+\vec{r} = \vec{r}(t)    
+\]
+L'insieme delle posizioni occupate dal punto nel suo moto è la sua
+\textbf{traiettoria $\gamma$}. Nota la traiettoria $\gamma$, chiamiamo
+con $s$ il numero reale detto ascissa curvilinea, il cui modulo, $|s|$,
+fornisce la lunghezza dell'arco di curva dall'origine scelta alla posizione
+sulla traiettoria del punto P. Introducendo la variabile $s$ possiamo 
+descrivere il moto anche con le seguenti due funzioni:
+\[
+    \begin{cases}
+        \vec{r} = \vec{r}(s)    \\
+        s = s(t)
+    \end{cases}
+\]
+dove in un sistema di coordinate cartesiane, $\mathbb{R}^3$:
+\[
+    \vec{r} = \vec{r}(s)  \Longrightarrow 
+    \begin{cases}
+        x = x(t) \\
+        y = y(t) \\
+        z = z(t)
+    \end{cases}
+    \longrightarrow \text{equazione della traiettoria in forma parametrica}
+\]
+\[
+   s= s(t) \longrightarrow \text{equazione oraria} 
 \]
