--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
     
 \section{Sistemi di riferimento}
 
-    \input{sections/sdr.tex}
+    \input{sections/complementi.tex}
 
 \section{Cinematica}
     
