--- a/sections/cinematica.tex
+++ b/sections/cinematica.tex
@@ -88,7 +88,9 @@ La rappresentazione cartesiana della velocità è la seguente:
 \[
 \vec{v} = \dot{x}\v{i} +  \dot{y}\v{j} +  \dot{z}\v{k}    
 \]
-
+%%%%%%%%%%%%%%%%
+%%%ACCELERAZIONE
+%%%%%%%%%%%%%%%%
 \subsection*{Il vettore accelerazione}
 
 Si definisce \textbf{accelerazione media} il vettore:
@@ -128,5 +130,16 @@ Gli ultimi due passaggi sono ottenuti derivando il versore $\v{u}_t$ secondo il 
 forma che è caratteristica della traiettoria $\gamma$ in esame(vedi moto circolare). \\
 Si deduce quindi che qualsiasi moto con traiettoria curva è \emph{accelerato} dal momento che la componente normale
 dell'accelerazione $\v{a}_n$ non è nulla(come nel caso di un moto rettilineo).
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%
+%%%MOTI%%%%%%%
+%%%%%%%%%%%%%%%%%%
+\subsection*{Moto rettilineo uniforme}
+\subsection*{Moto rettilineo uniformemente accelerato}
 \subsection*{Moto circolare uniforme}
 \label{cinem: circ-unif}
