moto circolare e coordinate polari

--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
 
 
 
-\renewcommand{\v}[1]{\boldsymbol{\hat{#1}}} 
+\renewcommand{\v}[1]{\mathbf{\hat{#1}}} 
 %%VERSORE
 \renewcommand{\vec}[1]{\vv{\bm{#1}}}   
 %%VETTORE BOLD E CON ARROW
@@ -48,9 +48,9 @@
 
 \begin{document}
     
-\section{Sistemi di riferimento}
+\section{Vettori e Sistemi di riferimento}
 
-    \input{sections/complementi.tex}
+    \input{sections/vett-sdr.tex}
 
 \section{Cinematica}
     
