--- a/sections/vett-sdr.tex
+++ b/sections/vett-sdr.tex
@@ -1,4 +1,8 @@
-
+\subsection*{Teorema del triplo prodotto vettoriale}
+\[
+ \vec{a} \cross (\vec{b} \cross \vec{c}) = \vec{b} \cross (\vec{a} \cross \vec{c}) -
+ \vec{c} \cross (\vec{a} \cross \vec{b})
+\]
 \subsection*{Derivate di vettori e versori }
 \[
      \v{v} \equiv \frac{\vec{v}}{\Norm{v}}
