--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 \theoremstyle{definition} %inizializzo definizioni                
 \newtheorem{definizione}{Definizione}[chapter]  %[chapter]-->numerazione della def con riferimento al capitolo
 \theoremstyle{plain}
-\newtheorem{teorema}{Teorema}[chapter]
+\newtheorem*{legge}{Legge Fisica}
 \theoremstyle{plain}
 \newtheorem{proposizione}{Proposizione}[chapter]
 \theoremstyle{remark}
