--- a/sections/vett-sdr.tex
+++ b/sections/vett-sdr.tex
@@ -1,3 +1,24 @@
+\subsection*{Le trasformazioni di Galileo}
+Considerando due sistemi di riferimento, $S $ ed $S'$ in cui il secondo ha un moto 
+di \emph{traslazione rettilinea uniforme} rispetto al primo, il vettore posizione e i principali
+vettori cinematici si trasformano nel modo seguente:
+\[
+\begin{cases}
+     \vec{r} = \vec{r}' + \vec{V}'  t' \\
+     t = t'
+\end{cases} 
+\qquad 
+\begin{cases}
+     \vec{v} = \vec{v}' + \vec{V} \\
+     \vec{a} = \vec{a}'
+\end{cases}    
+\]
+Da queste trasformazioni si deduce che la velocità non è invariante e dipende dal sistema di 
+riferimento:essa varia secondo la classica legge di composzione della velocità. \\
+Al contrario l'accelerazione è invariante. \\
+Il principio Galileiano afferma, quindi, che non è possibile distinguere due fenomeni fisici 
+
+
 \subsection*{Teorema del triplo prodotto vettoriale}
 \[
  \vec{a} \cross (\vec{b} \cross \vec{c}) = \vec{b} \cross (\vec{a} \cross \vec{c}) -
