--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 
 
 \begin{document}
-    
+    \input{sections/domande-orale-meccanica.tex}
 \section{Vettori e Sistemi di riferimento}
 
     \input{sections/vett-sdr.tex}
